force-app/main/default/objects/Payments__c/Payments__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <label>Payments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>