force-app/main/default/objects/Payments__c/fields/Link_for_Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Link_for_Credit_Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link for Credit Notes</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>